testsuite/tests/properties/invalid_prop_def/correct/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun prop(): Bool = true
}
